# scintilla-mod

./: CMakeLists.txt  tidy-gcc.bat  tidy.bat
.github/workflows/: sync.yml  windows.yml
include/: SciLexer.h  Scintilla.h  Scintilla.iface
lexers/: LexAsm.cxx  LexAutoIt3.cxx  LexBash.cxx  LexBatch.cxx  LexCMake.cxx  LexCPP.cxx  LexConfig.cxx  LexDiff.cxx  LexFSharp.cxx  LexHTML.cxx  LexInno.cxx  LexLaTeX.cxx  LexLua.cxx  LexMakefile.cxx  LexMatlab.cxx  LexNull.cxx  LexPascal.cxx  LexPerl.cxx  LexProps.cxx  LexRuby.cxx  LexSQL.cxx  LexTCL.cxx  LexVB.cxx
lexlib/: Accessor.cxx  Accessor.h  CharacterSet.h  LexAccessor.cxx  LexAccessor.h  LexerBase.cxx  LexerBase.h  LexerModule.cxx  LexerModule.h  PropSetSimple.cxx  PropSetSimple.h  StyleContext.cxx  StyleContext.h  WordList.cxx  WordList.h
scripts/: .pylintrc  MultiStageTable.py
src/: AutoComplete.cxx  AutoComplete.h  CallTip.cxx  CallTip.h  CaseConvert.cxx  CaseConvert.h  CaseFolder.cxx  CaseFolder.h  CellBuffer.cxx  CellBuffer.h  CharClassify.cxx  CharClassify.h  ContractionState.cxx  ContractionState.h  Decoration.cxx  Decoration.h  Document.cxx  Document.h  Editor.h  Indicator.cxx  Indicator.h  KeyMap.cxx  KeyMap.h  LineMarker.cxx  LineMarker.h  Partitioning.h  PerLine.cxx  PerLine.h  Platform.h  PositionCache.cxx  PositionCache.h  RESearch.cxx  RESearch.h  RunStyles.cxx  RunStyles.h  ScintillaBase.cxx  ScintillaBase.h  Selection.cxx  Selection.h  Style.cxx  (+6 more)
win32/: ExtraDefine.c  PlatWin.cxx  PlatWin.h  ScintillaWin.cxx
